charts/debug-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: config-copy-test
  namespace: ela
spec:
  containers:
    - name: check
      image: busybox
      command: ["sh", "-c", "cp -v /mnt/config/* /tmp/config/ && sleep 3600"]
      volumeMounts:
        - name: elastic-config
          mountPath: /mnt/config
        - name: config-volume
          mountPath: /tmp/config
  volumes:
    - name: elastic-config
      configMap:
        name: elasticsearch-config
    - name: config-volume
      emptyDir: {}
