charts/keystore-check.yaml
apiVersion: v1
kind: Pod
metadata:
  name: keytool-check
  namespace: ela
spec:
  containers:
    - name: check
      image: openjdk:17
      command: ["sh", "-c", "sleep 3600"]
      volumeMounts:
        - name: certs
          mountPath: /certs
  volumes:
    - name: certs
      secret:
        secretName: elastic-certs
